# mi7soft-rust

./: .env  .gitignore  Cargo.toml  IPC_QUEUE_GUIDE.md  LICENSE  README.md  config.toml  run_demo.ps1  task_queue
.trae/rules/: project_rules.md
benches/: shared_memory_bench.rs
config/: app.toml
daemon/: Cargo.toml
daemon/src/: main.rs
doc/: architecture.md
docs/: axum-guide.md  best-practices.md  config_guide.md  configurable_queue_guide.md  database-setup.md  http_integration_guide.md  pipe_configuration_guide.md  rust-basics.md  string_config_guide.md
entry/: Cargo.toml
entry/src/: common.rs  main.rs  scheduler.rs
entry/src/protocols/: common.rs  http_server.rs  mod.rs  mqtt_server.rs  tcp_server.rs  udp_server.rs  ws_server.rs
examples/: Cargo.toml  README.md  README_shared_box.md  async_futex_README.md  async_futex_example.rs  basic_queue_usage.rs  config_example.rs  config_file_example.rs  config_test.rs  config_usage_example.rs  configurable_queue_test.rs  cross_process_queue.rs  custom_config.toml  dynamic_pipe_factory.rs  gap_pattern_test.rs  pipe_basic_usage.rs  pipe_capacity_slot_size_README.md  pipe_capacity_slot_size_example.rs  pipe_config.toml  pipe_config_usage.rs  precise_gap_test.rs  producer.rs  producer_consumer_configs.rs  queue_full_test.rs  queue_gap_test.rs  shared_box_example.rs  string_config_example.rs  tail_full_test.rs  tail_position_test.rs  test_consumer_fix.rs  test_mailbox.rs  test_shared_memory.rs  tokio_async_queue.rs  tokio_consumer.rs  tokio_producer.rs  wait_async_examples.rs  wait_async_usage_guide.md  worker.rs
examples/src/: lib.rs
ipc_queue/: Cargo.toml
ipc_queue/src/: lib.rs
mi7/: Cargo.toml
mi7/src/: async_futex.rs  config.rs  interface.rs  lib.rs  logging.rs  mailbox.rs  pipe.rs  queue.rs  shared.rs  shared_box.rs  shared_ring.rs  shared_slot.rs  version.rs
scripts/: test_http_integration.ps1  test_http_integration.sh
src/: common.rs  examples.rs  ipc_queue.rs  lib.rs  locks.rs  main.rs  producer.rs  shared_memory.rs  utils.rs  worker.rs
src/app/: mod.rs
src/app/app1/: handler.rs  mod.rs  model.rs  service.rs
src/app/app2/: handler.rs  mod.rs  model.rs  service.rs
src/core/: error.rs  middleware.rs  mod.rs  response.rs  service.rs
src/infrastructure/: database.rs  logger.rs  mod.rs
src/ipc/: linux.rs  mod.rs
tests/: integration_tests.rs  test.http
worker/: Cargo.toml
worker/src/: listener.rs  main.rs  operator.rs  router.rs
