[package]
name = "mi7soft"
version = "0.1.0"
edition = "2024"
description = "高性能跨进程消息队列库"
license = "MIT"

[dependencies]
# 共享内存支持
shared_memory = "0.12"
# 内存映射文件支持（用于大数据传输）
memmap2 = "0.9"
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
# 序列化支持
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
