[workspace]
members = [
    "daemon",
    "entry",
    "worker",
    "mi7"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["mi7soft"]

[workspace.dependencies]
# 本地库包
mi7 = { path = "mi7" }

# 共享内存支持
shmem = "0.2"
# 内存映射文件支持（用于大数据传输）
memmap2 = "0.9"

axum = { version = "0.8.6", features = ["ws", "macros"] }
hyper = { version = "1.7.0", features = ["tcp"] }

# 异步运行时
tokio = { version = "1.48.0", features = ["full"] }

tower-http = { version = "0.5", features = ["cors"] }
# 序列化支持
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 错误处理
thiserror = "1.0"
# 日志
log = "0.4"

rumqttd = "0.20.0"
