[workspace]
members = ["daemon",
    "entry",
    "worker", "mi7", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["mi7soft"]

[workspace.dependencies]
# 本地库包
mi7 = { path = "mi7" }

# 内存映射文件支持（用于大数据传输）
memmap2 = "0.9"
libc = "0.2.177"

# 序列化支持
bincode = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "2"

# 日志
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2"
chrono = "0.4"

# tokin
tokio = { version = "1.48.0" }
async-channel="2.5"

# MQTT broker (optional) - enable the "mqtt" feature in Cargo if you want
rumqttd = { version = "0.20.0" }
