[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MI7 跨进程消息队列守护进程"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
mi7 = { path = "../mi7" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono = { workspace = true, features = ["serde"] }
rumqttd = { workspace = true, optional = true }
anyhow.workspace = true

[features]
mqtt = ["dep:rumqttd"]