[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "pipe_basic_usage"
path = "pipe_basic_usage.rs"

[[bin]]
name = "test_consumer_fix"
path = "test_consumer_fix.rs"

[[bin]]
name = "test_mailbox"
path = "test_mailbox.rs"

[dependencies]
mi7.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
async-channel = "2.3"
