[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "pipe_basic_usage"
path = "pipe_basic_usage.rs"

[[bin]]
name = "shared_box_example"
path = "shared_box_example.rs"


[[bin]]
name = "config_usage_example"
path = "config_usage_example.rs"

[dependencies]
mi7.workspace = true
serde.workspace = true
anyhow.workspace = true
