[package]
name = "ipc_queue"
version = "0.1.0"
edition = "2021"
description = "Cross-process message queue library using shared memory"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
memmap2 = "0.9"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "ipc_queue"
path = "src/lib.rs"