[package]
name = "mi7"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libc.workspace = true
serde.workspace = true
bincode.workspace = true
tokio = { workspace = true, features = ["full"] }

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono = { workspace = true, features = ["serde"] }