[package]
name = "mi7"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libc.workspace = true
serde.workspace = true
bincode.workspace = true
tokio = { workspace = true, features = ["full"] }

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono = { workspace = true, features = ["serde"] }
fs2 = "0.4"                                         # 用于跨平台文件锁
toml = "0.8"                                        # 用于配置文件解析
thiserror = "1.0"                                   # 用于错误处理
nix = { version = "0.30", features = ["event"] }

[dev-dependencies]
tempfile = "3.0" # 用于测试临时文件
