[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MI7 跨进程消息队列工作进程"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
mi7 = { path = "../mi7" }
memmap2.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
bincode.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono = { workspace = true, features = ["serde"] }